// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine-js build WASM module on platform maybe supporting WASM 1`] = `
[
  "assets/wasm_c-8515ca89.wasm",
  "assets/wasm_c.js-1642e984.bin",
  "assets/wasm_rust-404aff2f.wasm",
  "cc.js",
]
`;

exports[`engine-js build WASM module on platform not supporting WASM 1`] = `
[
  "assets/wasm_c.js-1642e984.bin",
  "cc.js",
]
`;

exports[`engine-js build WASM module on platform supporting WASM 1`] = `
[
  "assets/wasm_c-8515ca89.wasm",
  "assets/wasm_rust-404aff2f.wasm",
  "cc.js",
]
`;

exports[`engine-js build width option ammoJsWasm fallback 1`] = `
"function tryDefineGlobal (name, value) {
    const _global = typeof window === 'undefined' ? global : window;
    if (typeof _global[name] === 'undefined') {
        return (_global[name] = value);
    } else {
        // eslint-disable-next-line @typescript-eslint/no-unsafe-return
        return _global[name];
    }
}
tryDefineGlobal('CC_WECHAT', false);
tryDefineGlobal('CC_BAIDU', false);
tryDefineGlobal('CC_XIAOMI', true);
tryDefineGlobal('CC_ALIPAY', false);
tryDefineGlobal('CC_BYTEDANCE', false);
tryDefineGlobal('CC_OPPO', false);
tryDefineGlobal('CC_VIVO', false);
tryDefineGlobal('CC_HUAWEI', false);
tryDefineGlobal('CC_COCOSPLAY', false);
tryDefineGlobal('CC_QTT', false);
tryDefineGlobal('CC_LINKSURE', false);
tryDefineGlobal('CC_EDITOR', false);
tryDefineGlobal('CC_PREVIEW', false);
tryDefineGlobal('CC_BUILD', true);
tryDefineGlobal('CC_TEST', false);
tryDefineGlobal('CC_DEBUG', true);
tryDefineGlobal('CC_DEV', false);
tryDefineGlobal('CC_MINIGAME', true);
tryDefineGlobal('CC_RUNTIME_BASED', false);
tryDefineGlobal('CC_SUPPORT_JIT', false);
tryDefineGlobal('CC_JSB', false);

const FORCE_BANNING_BULLET_WASM = false;

console.log(FORCE_BANNING_BULLET_WASM);
"
`;

exports[`engine-js build width option ammoJsWasm false 1`] = `
"function tryDefineGlobal (name, value) {
    const _global = typeof window === 'undefined' ? global : window;
    if (typeof _global[name] === 'undefined') {
        return (_global[name] = value);
    } else {
        // eslint-disable-next-line @typescript-eslint/no-unsafe-return
        return _global[name];
    }
}
tryDefineGlobal('CC_WECHAT', false);
tryDefineGlobal('CC_BAIDU', false);
tryDefineGlobal('CC_XIAOMI', true);
tryDefineGlobal('CC_ALIPAY', false);
tryDefineGlobal('CC_BYTEDANCE', false);
tryDefineGlobal('CC_OPPO', false);
tryDefineGlobal('CC_VIVO', false);
tryDefineGlobal('CC_HUAWEI', false);
tryDefineGlobal('CC_COCOSPLAY', false);
tryDefineGlobal('CC_QTT', false);
tryDefineGlobal('CC_LINKSURE', false);
tryDefineGlobal('CC_EDITOR', false);
tryDefineGlobal('CC_PREVIEW', false);
tryDefineGlobal('CC_BUILD', true);
tryDefineGlobal('CC_TEST', false);
tryDefineGlobal('CC_DEBUG', true);
tryDefineGlobal('CC_DEV', false);
tryDefineGlobal('CC_MINIGAME', true);
tryDefineGlobal('CC_RUNTIME_BASED', false);
tryDefineGlobal('CC_SUPPORT_JIT', false);
tryDefineGlobal('CC_JSB', false);

const FORCE_BANNING_BULLET_WASM = true;

console.log(FORCE_BANNING_BULLET_WASM);
"
`;

exports[`engine-js build width option ammoJsWasm true 1`] = `
"function tryDefineGlobal (name, value) {
    const _global = typeof window === 'undefined' ? global : window;
    if (typeof _global[name] === 'undefined') {
        return (_global[name] = value);
    } else {
        // eslint-disable-next-line @typescript-eslint/no-unsafe-return
        return _global[name];
    }
}
tryDefineGlobal('CC_WECHAT', false);
tryDefineGlobal('CC_BAIDU', false);
tryDefineGlobal('CC_XIAOMI', true);
tryDefineGlobal('CC_ALIPAY', false);
tryDefineGlobal('CC_BYTEDANCE', false);
tryDefineGlobal('CC_OPPO', false);
tryDefineGlobal('CC_VIVO', false);
tryDefineGlobal('CC_HUAWEI', false);
tryDefineGlobal('CC_COCOSPLAY', false);
tryDefineGlobal('CC_QTT', false);
tryDefineGlobal('CC_LINKSURE', false);
tryDefineGlobal('CC_EDITOR', false);
tryDefineGlobal('CC_PREVIEW', false);
tryDefineGlobal('CC_BUILD', true);
tryDefineGlobal('CC_TEST', false);
tryDefineGlobal('CC_DEBUG', true);
tryDefineGlobal('CC_DEV', false);
tryDefineGlobal('CC_MINIGAME', true);
tryDefineGlobal('CC_RUNTIME_BASED', false);
tryDefineGlobal('CC_SUPPORT_JIT', false);
tryDefineGlobal('CC_JSB', false);

const FORCE_BANNING_BULLET_WASM = false;

console.log(FORCE_BANNING_BULLET_WASM);
"
`;

exports[`engine-js build without option ammoJsWasm 1`] = `
"function tryDefineGlobal (name, value) {
    const _global = typeof window === 'undefined' ? global : window;
    if (typeof _global[name] === 'undefined') {
        return (_global[name] = value);
    } else {
        // eslint-disable-next-line @typescript-eslint/no-unsafe-return
        return _global[name];
    }
}
tryDefineGlobal('CC_WECHAT', false);
tryDefineGlobal('CC_BAIDU', false);
tryDefineGlobal('CC_XIAOMI', true);
tryDefineGlobal('CC_ALIPAY', false);
tryDefineGlobal('CC_BYTEDANCE', false);
tryDefineGlobal('CC_OPPO', false);
tryDefineGlobal('CC_VIVO', false);
tryDefineGlobal('CC_HUAWEI', false);
tryDefineGlobal('CC_COCOSPLAY', false);
tryDefineGlobal('CC_QTT', false);
tryDefineGlobal('CC_LINKSURE', false);
tryDefineGlobal('CC_EDITOR', false);
tryDefineGlobal('CC_PREVIEW', false);
tryDefineGlobal('CC_BUILD', true);
tryDefineGlobal('CC_TEST', false);
tryDefineGlobal('CC_DEBUG', true);
tryDefineGlobal('CC_DEV', false);
tryDefineGlobal('CC_MINIGAME', true);
tryDefineGlobal('CC_RUNTIME_BASED', false);
tryDefineGlobal('CC_SUPPORT_JIT', false);
tryDefineGlobal('CC_JSB', false);

const FORCE_BANNING_BULLET_WASM = false;

console.log(FORCE_BANNING_BULLET_WASM);
"
`;
